--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       <div class="informational-banner col-xs-12 col-lg-8 col-lg-offset-2 text-xs-center p-t-3 p-b-1">
         <h2 class="informational-banner-title p-t-1 p-b-1">Skills</h2>
       </div>
-      <div class="informational-content">
+      <div class="informational-content p-b-3">
         <canvas id="skillsChart"></canvas>
       </div>
     </section>
