--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
     <section class="secondary-container p-t-3 p-b-3">
       <div class="project-banner col-xs-12 col-lg-8 col-lg-offset-2 text-xs-center p-t-3 p-b-1">
         <h6 class="project-banner-subtext">A fully customized eCommerce solution for digital content</h6>
-        <h6 class="project-banner-subtext">(This is a Software Juice project currently in development)</h6>
         <h2 class="project-banner-title p-t-1 p-b-1">Komposium's music library</h2>
         <button class="btn btn-secondary" data-toggle="modal" data-target="#komposiumModal">More info</button>
         <a href="http://www.komposium.com" class="btn btn-primary">View site</a>
@@ -233,7 +232,8 @@
       </div>
       <div class="informational-content col-lg-5 col-lg-offset-1 col-xs-12 text-xs-center text-lg-left p-t-2 p-b-3">
         <p>Originally a classically trained musician, I began seeking an alternative path through which I could channel my passion for creativity. I spent 11 years teaching and writing music for high school, collegiate, and independent ensembles, all of which taught me many lessons about the creative process, organization, and leadership.</p>
-        <p>A little more than 2 years ago, I made the decision to pursue a passion I'd developed in high school making games with friends: coding. I spent a year in self study before enrolling in The Iron Yard, where I graduated in July, 2015. A week after graduation, I began my new career, professionally, as a UI Engineer with BenefitFocus in Greenville, SC where I work daily on applications used by tens of millions of customers every year.</p>
+        <p>Almost 3 years ago, I made the decision to pursue a passion I'd developed in high school making games with friends: coding. I spent a year in self study before enrolling in The Iron Yard, where I graduated in July, 2015. A week after graduation, I began my new career, professionally, as a UI Engineer with BenefitFocus in Greenville, SC where I worked daily on applications used by tens of millions of customers every year.</p>
+        <p>In August of 2016, I accepted a Senior UI Engineer position with ChartSpan Medical Technologies in Greenville, SC. Since then, I have been responsible for architecting, building, and maintaining 4 different React/Redux and Backbone/Marionette applications used by thousands of healthcare professionals, patients, and support center specialists.</p>
         <p>In November of 2015, a colleague - Dan Shapiro - and I founded Software Juice, LLC. We have our first customer's launch approaching in July, so stay tuned for that and many more projects to come. You can check out the placeholder here: <a class="komposium-link" href="http://komposium.com">Komposium</a></p>
       </div>
       <div class="information-content-image col-lg-5 col-xs-12 text-xs-center text-lg-right p-b-2 p-t-2">
