updates to reflect professional status

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <h6 class="project-banner-subtext">A fully customized eCommerce solution for digital content</h6>
         <h2 class="project-banner-title p-t-1 p-b-1">Komposium's music library</h2>
         <button class="btn btn-secondary" data-toggle="modal" data-target="#komposiumModal">More info</button>
-        <a href="http://www.komposium.com" class="btn btn-primary">View site</a>
+        <!-- <a href="http://www.komposium.com" class="btn btn-primary">View site</a> -->
       </div>
       <div class="modal fade" id="komposiumModal" tabindex="-1" role="dialog" aria-labelledby="komposiumLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
@@ -103,8 +103,9 @@
                   </div>
                   <!--Body-->
                   <div class="modal-body">
-                      <p>Komposium approached us, Software Juice, with a need to get their dream of a music library up and running. The following technologies are utilized in the building of the client-side portion of the application:</p>
+                      <p>Komposium approached us, Software Juice, with a need to get their dream of a music library up and running. The following technologies are utilized in the building of this application:</p>
                       <ul>
+                        <li>- Node/Express</li>
                         <li>- Backbone/Marionette</li>
                         <li>- Dust</li>
                         <li>- ES6</li>
@@ -134,7 +135,7 @@
         <h6 class="project-banner-subtext">An experiment in unique design and implementation</h6>
         <h2 class="project-banner-title p-t-1 p-b-1">The Iron Yard Final Project</h2>
         <button class="btn btn-secondary" data-toggle="modal" data-target="#finalProjectModal">More info</button>
-        <a href="http://mchaperc.github.io/final-project" class="btn btn-primary">View site</a>
+        <!-- <a href="http://mchaperc.github.io/final-project" class="btn btn-primary">View site</a> -->
       </div>
       <div class="modal fade" id="finalProjectModal" tabindex="-1" role="dialog" aria-labelledby="finalProjectLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
@@ -220,6 +221,7 @@
     <section class="quinary-container p-t-3 p-b-3">
       <div class="informational-banner col-xs-12 col-lg-8 col-lg-offset-2 text-xs-center p-t-3 p-b-1">
         <h2 class="informational-banner-title p-t-1 p-b-1">Skills</h2>
+        <h6><em>note: scale is an attempt at absolute</em></h6>
       </div>
       <div class="informational-content p-b-3">
         <canvas id="skillsChart"></canvas>
@@ -227,14 +229,14 @@
     </section>
     <section class="senary-container p-t-3 p-b-3">
       <div class="informational-banner col-xs-12 col-lg-8 col-lg-offset-2 text-xs-center p-t-3 p-b-1">
-        <h2 class="informational-banner-title p-t-1 p-b-1">About me <a class="resume p-l-1" href="Matthew_D_Chastain_Resume.pdf" download="Matthew_D_Chastain_Resume.pdfesume.pdf"><i class="fa fa-file-pdf-o"></i></a></h2>
+        <h2 class="informational-banner-title p-t-1 p-b-1">About me <a class="resume p-l-1" href="Matthew_D_Chastain_Resume.pdf" download="Matthew_D_Chastain_resume.pdfesume.pdf"><i class="fa fa-file-pdf-o"></i></a></h2>
         <div class="hr m-t-2"></div>
       </div>
       <div class="informational-content col-lg-5 col-lg-offset-1 col-xs-12 text-xs-center text-lg-left p-t-2 p-b-3">
         <p>Originally a classically trained musician, I began seeking an alternative path through which I could channel my passion for creativity. I spent 11 years teaching and writing music for high school, collegiate, and independent ensembles, all of which taught me many lessons about the creative process, organization, and leadership.</p>
         <p>Almost 3 years ago, I made the decision to pursue a passion I'd developed in high school making games with friends: coding. I spent a year in self study before enrolling in The Iron Yard, where I graduated in July, 2015. A week after graduation, I began my new career, professionally, as a UI Engineer with BenefitFocus in Greenville, SC where I worked daily on applications used by tens of millions of customers every year.</p>
         <p>In August of 2016, I accepted a Senior UI Engineer position with ChartSpan Medical Technologies in Greenville, SC. Since then, I have been responsible for architecting, building, and maintaining 4 different React/Redux and Backbone/Marionette applications used by thousands of healthcare professionals, patients, and support center specialists.</p>
-        <p>In November of 2015, a colleague - Dan Shapiro - and I founded Software Juice, LLC. We have our first customer's launch approaching in July, so stay tuned for that and many more projects to come. You can check out the placeholder here: <a class="komposium-link" href="http://komposium.com">Komposium</a></p>
+        <p>After a short stint as Senior UI Engineer, I was promoted to VP of UI Development at ChartSpan. Following that promotion, the expansion of my skillset was rapid in acquiring Python, Django, and SQl skills to fill in gaps of product development, business intelligence, and scripting needs. During my tenure as VP, we successfully launched three applications in a wide variety of technologies.</p>
       </div>
       <div class="information-content-image col-lg-5 col-xs-12 text-xs-center text-lg-right p-b-2 p-t-2">
         <img src="img/me.png" alt="Matthew Chastain" class="z-depth-1">
@@ -250,6 +252,10 @@
       </div>
       <div class="informational-content"></div>
     </section>
+  </div>
+
+  <div id="returnToTop">
+    <a href="#" class="btn btn-floating waves-effect waves-light circle"><i class="fa fa-arrow-up 3x"></i></a>
   </div>
 
   <!-- Scripts -->
